# zx-spectrum-pico-memory

./: .gitignore  README.md
firmware/: CMakeLists.txt  zx_pico_fw.c
firmware/addr_tester/: CMakeLists.txt  minicom.cap  zx_pico_tester.c
firmware/arduino_tester/: README.txt  minicom.cap  sim.ino
pcb/v1.1/: sym-lib-table  zx-memory-16-32-cache.lib  zx-memory-16-32-rescue.kicad_sym  zx-memory-16-32.kicad_pcb  zx-memory-16-32.kicad_prl  zx-memory-16-32.kicad_pro  zx-memory-16-32.kicad_sch
pcb/v1.1/module_fab1/: errata_module_v_1_1.txt  zx-memory-16-32-B_Cu.gbr  zx-memory-16-32-B_Mask.gbr  zx-memory-16-32-B_Paste.gbr  zx-memory-16-32-B_Paste.gbr.hpgl  zx-memory-16-32-B_SilkS.gbr  zx-memory-16-32-Edge_Cuts.gbr  zx-memory-16-32-F_Cu.gbr  zx-memory-16-32-F_Mask.gbr  zx-memory-16-32-F_Paste.gbr  zx-memory-16-32-F_Paste.gbr.hpgl  zx-memory-16-32-F_SilkS.gbr  zx-memory-16-32-In1_Cu.gbr  zx-memory-16-32-In2_Cu.gbr  zx-memory-16-32-NPTH-drl_map.ps  zx-memory-16-32-NPTH.drl  zx-memory-16-32-PTH-drl_map.ps  zx-memory-16-32-PTH.drl
